# Stellar.UI.Desktop.VPNapp

./: .gitignore  README.md  index.html  japan.ovpn  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
scripts/: build-macos-helper.sh  download-flags.sh  linux-dev-root.sh
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  capabilities.json  tauri.conf.json
src-tauri/assets/linux/polkit/: 50-stellar-vpn.rules  org.stellarsecurity.vpn.desktop.helper.policy
src-tauri/capabilities/: main-capability.json
src-tauri/icons/: icon.icns
src-tauri/macos/: org.stellarsecurity.vpn.helper.plist
src-tauri/scripts/linux/: postinst.sh  prerm.sh
src-tauri/src/: macos_helper.rs  macos_installer.rs  main.rs
src/components/: VpnWorldMap.tsx
src/components/auth/: AuthRoute.tsx  ProtectedRoute.tsx  RootRedirect.tsx
src/components/layout/: AppShell.tsx  AuthShell.tsx
src/components/ui/: Button.tsx  OtpInput.tsx  TextInput.tsx
src/contexts/: ConnectionContext.tsx  SubscriptionContext.tsx
src/routes/Auth/: ForgotPassword.tsx  LoginAccountNumber.tsx  LoginEmail.tsx  NewPassword.tsx  PasswordOtp.tsx  Register.tsx  RegisterOtp.tsx  Welcome.tsx
src/routes/Dashboard/: ChangeLocation.tsx  Dashboard.tsx  Profile.tsx  Subscribe.tsx
src/services/: api.ts
src/utils/: auth.ts
