[package]
name = "stellar-vpn-desktop"
version = "0.1.0"
description = "Stellar VPN Desktop"
authors = ["Stellar Security"]
edition = "2021"
default-run = "stellar-vpn-desktop"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
anyhow = "1"

tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2.4.1"
tauri-plugin-autostart = "2.5.1"

clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
url = "2"
once_cell = "1"
sha2 = "0.10"
hex = "0.4"
libc = "0.2"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "io-util"] }

fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[[bin]]
name = "stellar-vpn-desktop"
path = "src/main.rs"

[[bin]]
name = "stellar-vpn-helper"
path = "bin/stellar-vpn-helper.rs"
