[package]
name = "stellar-vpn-desktop"
version = "0.1.6"
description = "Stellar VPN Desktop"
authors = ["Stellar Security"]
edition = "2021"
default-run = "stellar-vpn-desktop"
build = "build.rs"


[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
anyhow = "1"
tauri-plugin-fs = "2"
nix = { version = "0.28", default-features = false, features = ["user"] }


tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2.4.1"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-process = "2"

clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
url = "2"
once_cell = "1"
sha2 = "0.10"
hex = "0.4"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "io-util", "net", "sync", "fs"] }

fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
tauri-plugin-os = "2"

[[bin]]
name = "stellar-vpn-desktop"
path = "src/main.rs"

[[bin]]
name = "stellar-vpn-helper"
path = "bin/stellar-vpn-helper.rs"

[[bin]]
name = "stellar-vpn-helper-macos"
path = "bin/stellar-vpn-helper-macos.rs"
required-features = ["macos-build"]

[features]
default = []
macos-build = []

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.9.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
